bad/array_subscript_invalid_type_null.example_compiler_output
ERROR
[1mbad/array_subscript_invalid_type_null.lat:3:6: [1;31merror: [0;1mvalue of non-array type `null` has no subscript operator[m
	null[42];
	    [1;32m^[m
